longhorn/helm-crd.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: longhorn-system
